--- a/JS-5/函数调用的时机.md
+++ b/JS-5/函数调用的时机.md
@@ -33,3 +33,14 @@
    }
    func(0);
    ```
+   利用闭包使得 setTimeout 立即执行
+   ```javascript
+   let i = 0;
+   for (; i < 6; i++) {
+     (function (i) {
+       setTimeout(() => {
+         console.log(i);
+       }, 0);
+     })(i);
+   }
+   ```
